--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,30 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Sublime Text
+*.sublime*
+
+# eclipse specific git ignore
+*.pydevproject
+.project
+.metadata
+bin/lifesim/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# IntelliJ 
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
